--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 :root {
 --branco: white;
---cor-de-fundo: #00162E;
---fundo-senha: #00244D;
+--cor-de-fundo: #2c0220;
+--fundo-senha: hsl(342, 100%, 15%);
 --fundo-texto: #001E40;
---borda: #0075FF;
+--borda: #ff0095;
 --roboto: 'Roboto', sans-serif;
 --roboto-mono: 'Roboto Mono', monospace;
 }
