--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 :root {
 --branco: white;
---cor-de-fundo: #2c0220;
+--cor-de-fundo: #1b0014;
 --fundo-senha: hsl(342, 100%, 15%);
---fundo-texto: #001E40;
+--fundo-texto: hsl(342, 100%, 15%);
 --borda: #ff0095;
 --roboto: 'Roboto', sans-serif;
 --roboto-mono: 'Roboto Mono', monospace;
